tests/fixtures/fail/infer_unconstrained.sc
let make(T: type)(): i32 = 42

let main(): i32 = make()
